# OPD_Assignment1.2.0

./: Airplane.cpp  Airplane.h  Airport.cpp  Airport.h  CMakeLists.txt  FileHandle.h  FileReader.cpp  FileReader.h  Helper.cpp  Helper.h  Ticket.h  config.txt  main.cpp
