cmake_minimum_required(VERSION 3.28)
project(OPD_Assignment1_2_0)

set(CMAKE_CXX_STANDARD 17)

add_executable(OPD_Assignment1_2_0 main.cpp
        Ticket.h
        Airplane.cpp
        Airplane.h
        Airplane.h
        Airport.h
        Airport.cpp
        FileReader.h
        FileReader.cpp
        Helper.h
        Helper.cpp
        FileHandle.h
        FileHandle.h
)
